# git-branch-stack

./: Cargo.toml
src/: actions.rs  errors.rs  git.rs  lib.rs  main.rs  stack.rs
src/actions/: list.rs  pop.rs  push.rs  rotate.rs
tests/: test_list.rs  test_pop.rs  test_push.rs  test_rotate.rs  utils.rs
